# kernel-diffguard

./: .gitignore  LICENSE  README.md  pyproject.toml
.beads/: config.yaml  issues.jsonl
.github/workflows/: ci.yml
docs/: architecture.md  codebase-wisdom-loop.md  expert-operating-questions.md  expert-question-evidence-map.md  external-evidence.md  named-expert-checks.md  normalized-evidence-schemas.md  official-interface-research.md  operating-envelopes.md  roadmap.md  testing-strategy.md
scripts/: check.sh  run-golden-analysis.sh  run-scorecard.sh
src/kernel_diffguard/: __init__.py  charter.py  cli.py  commit_artifact.py  commit_review.py  evidence_schema.py  expert_checks.py  github_pr.py  github_source.py  golden.py  hostile_input.py  kernel_impact.py  lore.py  mailing_list.py  range_review.py  related_messages.py  review_packet.py  scorecard.py
tests/: test_charter.py  test_commit_artifact.py  test_evidence_schemas.py  test_expert_checks.py  test_github_pr_source.py  test_github_source.py  test_golden.py  test_lore.py  test_mailing_list_message.py  test_related_messages.py  test_review_commit.py  test_review_packet.py  test_review_range.py  test_scorecard.py
tests/golden/: linux-security-commit.expected.json  manifest.json  review-packet-status-mix.expected.json  suspicious-range.expected.json  suspicious-single-commit.expected.json
