[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "kernel-diffguard"
version = "0.1.0"
description = "Tools and workflows for assessing security and operational impact across git repository changes, starting with the Linux kernel."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "qiviut" }]
keywords = ["git", "linux-kernel", "supply-chain", "security", "patch-review", "impact-analysis"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Security",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.scripts]
kdiffguard = "kernel_diffguard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kernel_diffguard"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
